:dded new resource. Refactored the paths to be more in line with best practices in REST. (#11)
